; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_l2t.c_l2t_seq_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_l2t.c_l2t_seq_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }

@SEQ_START_TOKEN = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.seq_file*, i64*)* @l2t_seq_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @l2t_seq_start(%struct.seq_file* %0, i64* %1) #0 {
  %3 = alloca %struct.seq_file*, align 8
  %4 = alloca i64*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %3, align 8
  store i64* %1, i64** %4, align 8
  %5 = load i64*, i64** %4, align 8
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %10 = load i64*, i64** %4, align 8
  %11 = load i64, i64* %10, align 8
  %12 = sub nsw i64 %11, 1
  %13 = call i8* @l2t_get_idx(%struct.seq_file* %9, i64 %12)
  br label %16

14:                                               ; preds = %2
  %15 = load i8*, i8** @SEQ_START_TOKEN, align 8
  br label %16

16:                                               ; preds = %14, %8
  %17 = phi i8* [ %13, %8 ], [ %15, %14 ]
  ret i8* %17
}

declare dso_local i8* @l2t_get_idx(%struct.seq_file*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
